0711Update index01.html

--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
 <p id="signupStatus" style="text-align: center; color: green;"></p>
 <div id="adminPanel" style="display: none;">
   <h2>📊 관리자 전용 패널</h2>
-  <button onclick="viewAllRevenue()">전체 매출 보기</button>
-  <button onclick="openUserDeletion()">선생님 삭제</button>
+  <button id="revenueBtn" onclick="viewAllRevenue()">매출 보기</button>
 </div>
 
   <div class="table-wrapper">
