--- a/index.html
+++ b/index.html
@@ -80,257 +80,57 @@
   </style>
 </head>
 <body>
- <p id="userEmailDisplay"  style="position: absolute; top: 12px; left: 10px; font-size: 14px; color: #333; margin: 0; line-height: 1.5;">
-</p>
+  <p id="userEmailDisplay" style="position: absolute; top: 12px; left: 10px; font-size: 14px; color: #333; margin: 0; line-height: 1.5;"></p>
 
-<button id="logoutBtn" onclick="logout()" style="position: absolute; top: 10px; right: 10px; display: none;"padding: 4px 8px; font-size: 14px;">
-  로그아웃
-</button>
+  <button id="logoutBtn" onclick="logout()" style="position: absolute; top: 10px; right: 10px; display: none; padding: 4px 8px; font-size: 14px;">
+    로그아웃
+  </button>
 
   <h1>에나타 상담 순서표</h1>
+
   <div class="date-area">
     <label for="datePicker">날짜 선택: </label>
     <input type="date" id="datePicker">
   </div>
-<!-- 🔐 로그인 UI 삽입 -->
-<div id="loginBox" style="text-align: center; margin-bottom: 20px;">
-  <input type="email" id="email" placeholder="이메일" style="margin-right: 5px;" />
-  <input type="password" id="password" placeholder="비밀번호" style="margin-right: 5px;" />
-  <button onclick="login()">로그인</button>
-</div>
-<p id="loginStatus" style="text-align: center; font-weight: bold; color: darkblue;"></p>
 
-<!-- 🔐 회원가입 UI -->
-<!-- 🔐 회원가입 UI -->
-<div id="signupBox" style="text-align: center; margin-bottom: 20px;">
-  <input type="email" id="signupEmail" placeholder="회원가입 이메일" style="margin-right: 5px;" />
-  <input type="password" id="signupPassword" placeholder="비밀번호" style="margin-right: 5px;" />
-  <input type="text" id="signupAlias" placeholder="별칭 (예: 경희)" style="margin-right: 5px;" />
-  <button onclick="signup()">회원가입</button>
-</div>
-<p id="signupStatus" style="text-align: center; color: green;"></p>
-<div id="adminPanel" style="display: none;">
-  <h2>📊 관리자 전용 패널</h2>
-  <button id="revenueBtn" onclick="viewAllRevenue()">매출 보기</button>
-</div>
+  <!-- 로그인 UI -->
+  <div id="loginBox" style="text-align: center; margin-bottom: 20px;">
+    <input type="email" id="email" placeholder="이메일" style="margin-right: 5px;" />
+    <input type="password" id="password" placeholder="비밀번호" style="margin-right: 5px;" />
+    <button onclick="login()">로그인</button>
+  </div>
+  <p id="loginStatus" style="text-align: center; font-weight: bold; color: darkblue;"></p>
+
+  <!-- 회원가입 UI -->
+  <div id="signupBox" style="text-align: center; margin-bottom: 20px;">
+    <input type="email" id="signupEmail" placeholder="회원가입 이메일" style="margin-right: 5px;" />
+    <input type="password" id="signupPassword" placeholder="비밀번호" style="margin-right: 5px;" />
+    <input type="text" id="signupAlias" placeholder="별칭 (예: 경희)" style="margin-right: 5px;" />
+    <button onclick="signup()">회원가입</button>
+  </div>
+  <p id="signupStatus" style="text-align: center; color: green;"></p>
+
+  <div id="adminPanel" style="display: none;">
+    <h2>📊 관리자 전용 패널</h2>
+    <button id="revenueBtn" onclick="viewAllRevenue()">매출 보기</button>
+  </div>
 
   <div class="table-wrapper">
     <table id="orderTable">
       <thead>
         <tr id="nameRow">
-  <th>순서</th>
-  <th><div class="header-cell"><select class="name"><option>이름</option></select><span class="score"></span></div></th>
-  <th><div class="header-cell"><select class="name"><option>이름</option></select><span class="score"></span></div></th>
-  <th><div class="header-cell"><select class="name"><option>이름</option></select><span class="score"></span></div></th>
-  <th><div class="header-cell"><select class="name"><option>이름</option></select><span class="score"></span></div></th>
-</tr>
+          <th>순서</th>
+          <th><div class="header-cell"><select class="name"><option>이름</option></select><span class="score"></span></div></th>
+          <th><div class="header-cell"><select class="name"><option>이름</option></select><span class="score"></span></div></th>
+          <th><div class="header-cell"><select class="name"><option>이름</option></select><span class="score"></span></div></th>
+          <th><div class="header-cell"><select class="name"><option>이름</option></select><span class="score"></span></div></th>
+        </tr>
       </thead>
       <tbody id="tableBody"></tbody>
     </table>
   </div>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getFirestore, doc, getDoc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyBCQVBVr9WXt4eK-mr7OZCcs72Y8iKZJBY",
-      authDomain: "enata-consult-order.firebaseapp.com",
-      projectId: "enata-consult-order",
-      storageBucket: "enata-consult-order.firebasestorage.app",
-      messagingSenderId: "1049122668305",
-      appId: "1:1049122668305:web:06c8b31a31bb4b81e7d6b0"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-
-    const tableBody = document.getElementById("tableBody");
-    const nameRow = document.getElementById("nameRow");
-    const datePicker = document.getElementById("datePicker");
-    const scoreMap = { general: 1, designated: 1, reserved: 0.5 };
-    const activeTeachers = [false, false, false, false];
-
-    document.getElementById("datePicker").valueAsDate = new Date();
-    let currentDate = datePicker.value;
-
-    nameRow.querySelectorAll("select.name").forEach((select, idx) => {
-      select.addEventListener("change", function () {
-        const value = this.value;
-        activeTeachers[idx] = (value !== "이름");
-        this.classList.toggle("selected", value !== "이름");
-        updateScores();
-        updateNextSuggestions();
-      });
-    });
-
-    datePicker.addEventListener("change", (e) => {
-      currentDate = e.target.value;
-      loadSchedule(currentDate);
-    });
-
-    function createTable(rows = 60) {
-      tableBody.innerHTML = "";
-      for (let i = 0; i < rows; i++) {
-        const tr = document.createElement("tr");
-        const th = document.createElement("th");
-        th.textContent = i + 1;
-        tr.appendChild(th);
-        for (let j = 0; j < 4; j++) {
-          const td = document.createElement("td");
-          td.dataset.row = i;
-          td.dataset.col = j;
-          td.addEventListener("click", () => toggleType(td));
-          tr.appendChild(td);
-        }
-        tableBody.appendChild(tr);
-      }
-    }
-
-    function toggleType(cell) {
-      const row = parseInt(cell.dataset.row);
-      const col = parseInt(cell.dataset.col);
-      if (!activeTeachers[col]) return;
-      for (let i = 0; i < 4; i++) {
-        if (i !== col) {
-          const other = tableBody.rows[row].cells[i + 1];
-          if (other.className !== "") return;
-        }
-      }
-      const states = ["", "general", "designated", "reserved"];
-      const current = cell.className;
-      const next = states[(states.indexOf(current) + 1) % states.length];
-      cell.className = next;
-      cell.textContent = next === "" ? "" : (next === "general" ? "일반" : next === "designated" ? "지명" : "예약");
-      updateScores();
-      updateNextSuggestions();
-      saveSchedule();
-    }
-
-    function updateScores() {
-      const scores = [0, 0, 0, 0];
-      for (let row of tableBody.rows) {
-        for (let i = 0; i < 4; i++) {
-          const cls = row.cells[i + 1].className;
-          if (scoreMap[cls] && activeTeachers[i]) scores[i] += scoreMap[cls];
-        }
-      }
-      nameRow.querySelectorAll("th").forEach((th, i) => {
-        const scoreSpan = th.querySelector(".score");
-        if (scoreSpan && activeTeachers[i - 1]) {
-          scoreSpan.textContent = `(${scores[i - 1]}점)`;
-        } else if (scoreSpan) {
-          scoreSpan.textContent = "";
-        }
-      });
-    }
-
-    function updateNextSuggestions() {
-      const scores = [0, 0, 0, 0];
-      for (let row of tableBody.rows) {
-        for (let i = 0; i < 4; i++) {
-          const cls = row.cells[i + 1].className;
-          if (scoreMap[cls] && activeTeachers[i]) scores[i] += scoreMap[cls];
-        }
-      }
-      for (let i = 0; i < tableBody.rows.length; i++) {
-        const row = tableBody.rows[i];
-        const th = row.cells[0];
-        let isFilled = false;
-        for (let j = 1; j <= 4; j++) {
-          if (row.cells[j].className !== "") {
-            isFilled = true;
-            break;
-          }
-        }
-        if (!isFilled) {
-          const active = scores.map((score, idx) => ({ idx, score }))
-                               .filter(t => activeTeachers[t.idx])
-                               .sort((a, b) => a.score - b.score);
-          if (active.length > 0) {
-            th.textContent = nameRow.querySelectorAll("select.name")[active[0].idx].value;
-          }
-          break;
-        } else {
-          th.textContent = i + 1;
-        }
-      }
-    }
-
-async function saveSchedule() {
-  const ref = doc(db, "schedules", currentDate);
-  const slots = [];
-
-  Array.from(tableBody.rows).forEach((row, rowIndex) => {
-    Array.from(row.cells).slice(1).forEach((td, colIndex) => {
-      slots.push({
-        row: rowIndex + 1,
-        col: colIndex,
-        type: td.className || ""
-      });
-    });
-  });
-
-  const teacherNames = Array.from(nameRow.querySelectorAll("select.name"))
-                            .map(select => select.value);
-
-  await setDoc(ref, { slots, teacherNames });
-}
-
-    async function loadSchedule(dateStr) {
-      const ref = doc(db, "schedules", dateStr);
-      const snap = await getDoc(ref);
-      if (!snap.exists()) {
-        await setDoc(ref, { slots: [] });
-      }
-   onSnapshot(ref, (docSnap) => {
-  if (docSnap.exists()) {
-    const data = docSnap.data();
-    restoreTable(data.slots, data.teacherNames);
-  }
-});
-    }
-
-   function restoreTable(slots, teacherNames = []) {
-  createTable(60);
-
-  // 선생님 이름 복원
-  nameRow.querySelectorAll("select.name").forEach((select, i) => {
-    const value = teacherNames[i] || "이름";
-    select.value = value;
-    activeTeachers[i] = (value !== "이름");
-    select.classList.toggle("selected", value !== "이름");
-  });
-
-  // 셀 내용 복원
-  slots.forEach(item => {
-    const cell = tableBody.rows[item.row - 1]?.cells?.[item.col + 1];
-    if (!cell) return;
-    const type = item.type;
-    cell.className = type;
-    cell.textContent = type === "general" ? "일반" :
-                       type === "designated" ? "지명" :
-                       type === "reserved" ? "예약" : "";
-  });
-
-  updateScores();
-  updateNextSuggestions();
-}
-
-    createTable(60);
-    loadSchedule(currentDate);
-
-// ✅ 2번. 로그아웃 함수는 여기에 추가
-window.logout = function () {
-  signOut(auth)
-    .then(() => {
-      location.reload();  // 새로고침으로 전체 초기화
-    })
-    .catch((error) => {
-      alert("로그아웃 실패: " + error.message);
-    });
-};
-  </script>
-<script type="module" src="script.js"></script>
+  <!-- ✅ 외부 스크립트 연결만 유지 -->
+  <script type="module" src="script.js"></script>
 </body>
 </html>
