--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+-webkit-user-select: none;       /* 추가 */
+  -webkit-touch-callout: none;     /* 추가 */
     }
     thead th {
       position: sticky;
