--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <label>고객 연락처</label>
     <input type="text" id="paymentPhone" placeholder="010-0000-0000">
     <button onclick="checkCustomer()">확인</button>
-    <button onclick="openNewCustomerPopupFromPayment()">신규</button>
+    <button onclick="openNewCustomerPopupFromPayment()" style="display: none;">신규</button>
     <div id="pointInfo" style="margin-top: 6px; font-size: 14px; color: #555;"></div>
 
     <label>현금</label>
