--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
   <button onclick="closeNewCustomerPopup()">닫기</button>
 </div>
 
-<!-- ✅ 결제 팝업 HTML 수정 버전 -->
+<!-- ✅ 수정된 결제 팝업 HTML -->
 <div id="paymentPopup" class="popup" style="display: none;">
   <div class="popup-content">
     <h3>💳 [예약] 결제 입력</h3>
@@ -204,71 +204,59 @@
       <label style="flex: 1;">고객 연락처
         <input type="text" id="paymentPhone" placeholder="010-0000-0000">
       </label>
-      <span id="customerLevel" style="font-size: 14px; color: gray;">[고객 등급]</span>
+      <button onclick="checkCustomer()" id="checkBtn">확인</button>
+      <span id="customerLevel" style="font-size: 14px; color: gray; display: none;">[고객 등급]</span>
     </div>
 
-    <div style="display: flex; gap: 10px;">
-      <button onclick="checkCustomer()" id="checkBtn">확인</button>
+    <div style="margin-top: 6px;">
       <button onclick="openNewCustomerPopupFromPayment()" id="signupBtn" style="display: none;">신규</button>
     </div>
 
-    <div id="pointInfo" style="margin-top: 6px; font-size: 14px; color: #555;"></div>
+    <!-- 생년월일/출생정보 영역은 기본 숨김 -->
+    <div id="birthInfoSection" style="display: none;">
+      <label>생년월일:</label>
+      <div style="display: flex; gap: 6px;">
+        <select id="birthYear" style="flex: 1;"></select>
+        <select id="birthMonth" style="flex: 1;"></select>
+        <select id="birthDay" style="flex: 1;"></select>
+      </div>
 
-    <label>생년월일:</label>
-    <div style="display: flex; gap: 6px;">
-      <select id="birthYear" style="flex: 1;"></select>
-      <select id="birthMonth" style="flex: 1;"></select>
-      <select id="birthDay" style="flex: 1;"></select>
+      <label style="margin-top: 8px;">출생 정보:</label>
+      <div style="display: flex; gap: 8px; align-items: center;">
+        <select id="birthHour2" style="width: 90px;">
+          <option value="모름">모름</option>
+        </select>
+        <select id="birthMinute2" style="width: 90px;">
+          <option value="모름">모름</option>
+        </select>
+        <select id="gender2" style="flex: 1;">
+          <option value="">성별 선택</option>
+          <option value="남">남</option>
+          <option value="여">여</option>
+        </select>
+      </div>
     </div>
 
-    <label style="margin-top: 8px;">출생 정보:</label>
-    <div style="display: flex; gap: 8px; align-items: center;">
-      <select id="birthHour2" style="width: 90px;">
-        <option value="모름">모름</option>
-        <!-- 시간 옵션 -->
-      </select>
-      <select id="birthMinute2" style="width: 90px;">
-        <option value="모름">모름</option>
-        <!-- 분 옵션 -->
-      </select>
-      <select id="gender2" style="flex: 1;">
-        <option value="">성별 선택</option>
-        <option value="남">남</option>
-        <option value="여">여</option>
-      </select>
-    </div>
-
-    <label>현금</label>
     <div style="display: flex; align-items: center; gap: 8px;">
       <span style="width: 70px;">현금</span>
       <input type="number" id="cashInput" placeholder="0원" style="flex: 1;">
     </div>
-
-    <label>카드</label>
     <div style="display: flex; align-items: center; gap: 8px;">
       <span style="width: 70px;">카드</span>
       <input type="number" id="cardInput" placeholder="0원" style="flex: 1;">
     </div>
-
-    <label>송금</label>
     <div style="display: flex; align-items: center; gap: 8px;">
       <span style="width: 70px;">송금</span>
       <input type="number" id="transferInput" placeholder="0원" style="flex: 1;">
     </div>
-
-    <label>페이</label>
     <div style="display: flex; align-items: center; gap: 8px;">
       <span style="width: 70px;">페이</span>
       <input type="number" id="payInput" placeholder="0원" style="flex: 1;">
     </div>
-
-    <label>총 합계</label>
     <div style="display: flex; align-items: center; gap: 8px;">
       <span style="width: 70px;">합계</span>
       <input type="text" id="totalAmount" readonly style="flex: 1;">
     </div>
-
-    <label>적립 포인트</label>
     <div style="display: flex; align-items: center; gap: 8px;">
       <span style="width: 70px;">포인트</span>
       <input type="text" id="earnedPoint" readonly style="flex: 1;">
@@ -281,6 +269,7 @@
     </div>
   </div>
 </div>
+
 
 
 
